--- a/src/components/likes.css
+++ b/src/components/likes.css
@@ -20,7 +20,7 @@
   justify-content: flex-end;
   align-items: center;
   /* margin: 0.5rem; */
-  height: 90vh;
+  height: 85vh;
 }
 
 .command-swipe {
