--- a/src/components/simpleProfile.css
+++ b/src/components/simpleProfile.css
@@ -15,6 +15,6 @@
 }
 
 .MuiCard-root {
-  height: 20rem;
+  /* height: 20rem; */
   width: 20rem;
 }
